--- a/apps/taipe-contracts/package.json
+++ b/apps/taipe-contracts/package.json
@@ -41,6 +41,7 @@
   "dependencies": {
     "@chainlink/contracts": "^0.4.2",
     "@openzeppelin/contracts": "^4.7.3",
+    "@uniswap/v3-periphery": "^1.4.3",
     "defender-relay-client": "^1.30.0"
   }
 }
