--- a/apps/taipe-contracts/package.json
+++ b/apps/taipe-contracts/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "lint": "solhint 'contracts/**/*.sol'",
     "test": "hardhat test",
+    "echidna": "./echidna-test . --contract BridgeEchidna --contract MinterEchidna --config echidna.config.yaml",
     "coverage": "hardhat coverage",
     "build": "yarn compile && rimraf dist && tsc  -p tsconfig.build.json",
     "compile": "hardhat compile",
