deploy tier 1 and 3 upgradable

--- a/apps/taipe-contracts/.gitignore
+++ b/apps/taipe-contracts/.gitignore
@@ -12,3 +12,8 @@ artifacts
 # echidna
 crytic-export
 arguments.js
+
+// .gitignore
+# OpenZeppelin
+.openzeppelin/dev-*.json
+.openzeppelin/.session
