--- a/apps/taipe-contracts/package.json
+++ b/apps/taipe-contracts/package.json
@@ -45,6 +45,8 @@
   "dependencies": {
     "@chainlink/contracts": "^0.4.2",
     "@openzeppelin/contracts": "^4.7.3",
+    "@openzeppelin/contracts-upgradeable": "^4.8.0",
+    "@openzeppelin/hardhat-upgrades": "^1.21.0",
     "defender-relay-client": "^1.30.0",
     "dotenv": "^16.0.2"
   }
