--- a/apps/taipe-contracts/package.json
+++ b/apps/taipe-contracts/package.json
@@ -45,9 +45,10 @@
   "dependencies": {
     "@chainlink/contracts": "^0.4.2",
     "@openzeppelin/contracts": "^4.7.3",
-    "@uniswap/v3-periphery": "^1.4.3",
     "@openzeppelin/contracts-upgradeable": "^4.8.0",
     "@openzeppelin/hardhat-upgrades": "^1.21.0",
+    "@uniswap/v3-core": "^1.0.1",
+    "@uniswap/v3-periphery": "^1.4.3",
     "defender-relay-client": "^1.30.0",
     "dotenv": "^16.0.2"
   }
