--- a/apps/taipe-contracts/package.json
+++ b/apps/taipe-contracts/package.json
@@ -26,6 +26,7 @@
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "@typechain/ethers-v5": "^10.1.0",
     "@typechain/hardhat": "^6.1.2",
+    "@types/mocha": "^10.0.1",
     "chai": "^4.3.6",
     "ethers": "^5.6.9",
     "hardhat": "^2.10.1",
@@ -50,6 +51,7 @@
     "@uniswap/v3-core": "^1.0.1",
     "@uniswap/v3-periphery": "^1.4.3",
     "defender-relay-client": "^1.30.0",
-    "dotenv": "^16.0.2"
+    "dotenv": "^16.0.2",
+    "hardhat-live-fork": "^0.0.1"
   }
 }
