--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
     "coverage": "hardhat coverage",
     "build": "pnpm compile && rimraf dist && tsc  -p tsconfig.build.json",
     "compile": "hardhat compile",
-    "codegen": "hardhat typechain",
-    "build:shared": "pnpm -w build --scope=shared --no-deps",
-    "build:dependencies": "pnpm build:shared"
+    "codegen": "hardhat typechain"
   },
   "devDependencies": {
     "@ethersproject/abi": "^5.6.4",
@@ -38,11 +36,14 @@
     "solhint": "3.3.6",
     "solhint-plugin-prettier": "^0.0.5",
     "solidity-coverage": "^0.7.21",
+    "ts-node": "^10.9.1",
     "typechain": "^8.1.0",
     "typescript": "^4.8.4"
   },
   "dependencies": {
     "@chainlink/contracts": "^0.4.2",
+    "@maticnetwork/maticjs": "3.6.0-beta.3",
+    "@maticnetwork/maticjs-ethers": "^1.0.3",
     "@openzeppelin/contracts": "^4.7.3",
     "@openzeppelin/contracts-upgradeable": "^4.8.0",
     "@openzeppelin/hardhat-upgrades": "^1.21.0",
